--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>DYNAMIC CALCULATOR</h1>
-    <div>
+    <div class="md">
         <input type="text">
         <div>
             <button value="7" onclick="calc(event)">7</button>
